# bureaucrate

./: .envrc  Cargo.toml  flake.nix  generator.jsonnet  pc.libsonnet
src/: bump.rs  generator.rs  main.rs
