[package]
name = "unique-versioner"
version = "0.12.0"
edition = "2021"

[dependencies]
# Logging
tracing = "0.1.35"
tracing-subscriber = "0.3.14"

# CLI parser
clap = { version = "3.2.10", features = ["derive"] }

# Project analysis
git2 = "0.14.4"
guppy = "0.14.2"
semver = "1.0.12"
camino = "1.0.9"

# Generation
jrsonnet-evaluator = { git = "https://github.com/CertainLach/jrsonnet.git", version = "0.4.2" }
chrono = "0.4.19"

# Cargo.toml modification
toml_edit = "0.14.4"

# Error reporting
anyhow = "1.0.58"
