[package]
name = "unique-versioner"
version = "0.12.0"
edition = "2021"

[dependencies]
# Logging
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }

# CLI parser
clap = { version = "4.5", features = ["derive"] }

# Project analysis
git2 = "0.19.0"
guppy = "0.17.7"
semver = "1.0.12"
camino = "1.1"

# Generation
chrono = "0.4.19"

# Cargo.toml modification
toml_edit = "0.22.20"

# Error reporting
anyhow = "1.0.58"

[dependencies.jrsonnet-stdlib]
git = "https://github.com/CertainLach/jrsonnet.git"
rev = "a31a8ef0c0189f88ed32d84cb2dcae3b7d7861af"
version = "0.5.0-pre96"

[dependencies.jrsonnet-evaluator]
git = "https://github.com/CertainLach/jrsonnet.git"
rev = "a31a8ef0c0189f88ed32d84cb2dcae3b7d7861af"
version = "0.5.0-pre96"
